--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
 <h1>EasyMariaDB</h1>
-<p>EasyMariaDB es una herramienta pensada para facilitar la creación de bases de dato y de usuarios desde LibreOffice en un servidor MariDB o MySQL</p>
+<p>EasyMariaDB es una herramienta diseñada para facilitar la creación de bases de dato y de usuarios desde LibreOffice en un servidor MariDB o MySQL</p>
 </body>
 </html>
